--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -71,13 +71,13 @@
   margin-left: auto;
 }
 
-.footer-link-icon {
+.footer-social-links__icon {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-right: 10px;
 }
-.footer-social-link {
+.footer-social-links__link {
   fill: #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
