--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ ul {
 }
 
 /* site-nav */
-.nav-content {
+.header__nav-content {
   display: flex;
   align-items: center;
 }
@@ -178,7 +178,6 @@ ul {
 }
 
 .hero {
-  /* background-color: var(--secondary-background-color); */
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -189,7 +188,7 @@ ul {
   padding-bottom: 200px;
 }
 
-.hero-title {
+.hero__title {
   padding-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
@@ -245,7 +244,7 @@ ul {
   justify-content: center;
 }
 
-.advantage-block {
+.advantages-list__block {
   display: flex;
   width: 270px;
   height: 120px;
@@ -259,7 +258,7 @@ ul {
   display: flex;
 }
 
-.advantage-item:not(:last-child) {
+.advantages-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -349,7 +348,7 @@ ul {
   margin-top: 50px;
 }
 
-.stuff-item {
+.stuff-list__item {
   align-items: center;
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -357,7 +356,7 @@ ul {
   background-color: #fff;
 }
 
-.stuff-item:not(:last-child) {
+.stuff-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -433,7 +432,7 @@ ul {
   margin-bottom: 94px;
 }
 
-.client-icon {
+.client-list__icon {
   justify-content: center;
   align-items: center;
   display: flex;
@@ -449,16 +448,16 @@ ul {
   justify-content: center;
 }
 
-.client-item:not(:last-child) {
+.client-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.client-icon {
+.client-list__icon {
   fill: #afb1b8;
 }
 
-.client-section-link:hover .client-icon,
-.client-section-link:focus .client-icon {
+.client-list__link:hover .client-list__icon,
+.client-list__link:focus .client-list__icon {
   fill: var(--accent-color);
   border: var(--accent-color) solid 1px;
 }
@@ -539,21 +538,21 @@ ul {
   margin-left: auto;
 }
 
-.footer-link-icon {
+.footer-social-links__icon {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-right: 10px;
 }
 
-.footer-social-link {
+.footer-social-links__link {
   fill: #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-link:hover, .footer-social-link:focus {
+.footer-social-links__link:hover, .footer-social-links__link:focus {
   border-radius: 50%;
   fill: #ffffff;
   background-color: var(--accent-color);
