--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -19,7 +19,7 @@
   justify-content: center;
 }
 
-.advantage-block {
+.advantages-list__block {
   display: flex;
   width: 270px;
   height: 120px;
@@ -33,7 +33,7 @@
   display: flex;
 }
 
-.advantage-item {
+.advantages-list__item {
   &:not(:last-child) {
     margin-right: 30px;
   }
