--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,5 +1,4 @@
 .hero {
-  /* background-color: var(--secondary-background-color); */
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/background.jpg);
   background-repeat: no-repeat;
@@ -12,7 +11,7 @@
   padding-bottom: 200px;
 }
 
-.hero-title {
+.hero__title {
   padding-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
