--- a/sass/layout/_stuff.scss
+++ b/sass/layout/_stuff.scss
@@ -9,7 +9,7 @@
   margin-top: 50px;
 }
 
-.stuff-item {
+.stuff-list__item {
   align-items: center;
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
