--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 @import './utils/vars';
 @import './utils/hidden';
 @import './base/reset';
-
+@import './components/container';
+@import './components/logo';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/advantages';
@@ -11,3 +12,4 @@
 @import './layout/footer';
 @import './layout/footer-form';
 @import './layout/modal';
+@import './layout/portfolio';
